--- a/Cleaning Project/css/style.css
+++ b/Cleaning Project/css/style.css
@@ -54,16 +54,30 @@ div .panel {
 #page1 {
 	width: 100%;
 	height: 600px;
-	background-image: url("../images/nyc.jpg");
 	background-size: 100% 100%;
 }
+.parallax {
+    background-image: url("../images/nyc.jpg");
+    height: 600px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	position: relative;
+}
 #cover {
-	background-color: rgba(255,255,255, .2);
+	background-color: rgba(255,255,255, .4);
+	position: absolute;
+	width: 100%;
+	height: 600px;
+	top: 0;
 }
 #header {
 	width: 100%;
 	height: 50px;
 	padding-top: 5%;
+	position: absolute;
+	top: 0;
 }
 
 #nav {
@@ -78,11 +92,13 @@ div .panel {
 
 #nav a {
 	text-decoration: none;
-	color: white;
+	color: black;
 }
 
 #homepage{
 	text-align: center;
+	position: absolute;
+	top: 10%;
 }
 #homepage img {	
 	width: 80%;
@@ -96,6 +112,7 @@ div .panel {
 	text-align: center;
 	padding: 5% 0;
 	display: inline-block;
+	background-color: #E8E5DD;
 }
 .img {
 	width: 30%;
@@ -110,12 +127,13 @@ div .panel {
 #page2 {
 	width: 100%;
 	display: inline-block;
-	margin-bottom: 1%;
+	padding-bottom: 1%;
+	background-color: #E8E5DD;
 }
 
 #home-info {
 	width: 30%;
-	margin: 0 0 0 3%;
+	margin-left: 3%;
 	float: left;
 	padding: 0 1%;
 	margin-top: 5%;
@@ -132,7 +150,7 @@ div .panel {
 
 #home img {
 	width: 90%;
-	margin: 3%;
+	margin: 2%;
 	padding: 1%;
 	border: 1px solid grey;
 	height: 400px;
@@ -148,7 +166,8 @@ div .panel {
 #page3 {
 	width: 100%;
 	display: inline-block;
-	margin-bottom: 8%;
+	padding-bottom: 8%;
+	background-color: #E8E5DD;
 }
 
 #buisness {
@@ -159,7 +178,7 @@ div .panel {
 #buisness img {
 	width: 90%;
 	height: 400px;
-	margin: 3%;
+	margin: 2%;
 	padding: 1%;
 	border: 1px solid black;
 }
@@ -168,7 +187,7 @@ div .panel {
 	width: 30%;
 	float: left;
 	padding: 0 1%;
-	margin-top: 5%;
+	margin-top: 4%;
 }
 
 #buisness-info li {
