--- a/Icloud new/css/style.css
+++ b/Icloud new/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 #About {
-	background-color: #fff;
+	background-color: rgba( 0, 0, 0, .4);
 	display: inline-block;
 }
 
@@ -53,8 +53,9 @@ body {
 }
 
 #Services {
-	background-color: rgba( 0, 0, 0, .2);	
+	background-color: rgba( 0, 0, 0, .4);	
 	display: inline-block;
+	overflow: hidden;
 }
 
 #home {
@@ -62,20 +63,32 @@ body {
 	float: left;
 	margin: 0;
 }
-#home img {
-	width: 50%;
-	height: 20%;
-}
-
 #buisness {
 	width: 50%;
 	float: left;
 }
-#buisness img {
-	width: 50%;
-	height: 20%;
+button.accordion {
+    background-color: #eee;
+    color: black;
+    cursor: pointer;
+    padding: 18px;
+    width: 60%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
 }
 
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd; 
+}
+
+div .panel {
+    padding: 0 18px;
+    display: none;
+	font-size: .8em;
+}
 #Contact {
 	background-color: rgba( 0, 0, 0, .2);	
 }
