--- a/Cleaning Project/css/style.css
+++ b/Cleaning Project/css/style.css
@@ -75,22 +75,29 @@ div .panel {
 #header {
 	width: 100%;
 	height: 50px;
-	padding-top: 5%;
-	position: absolute;
+	padding: 1% 0;
+	position: fixed;
 	top: 0;
+	background-color: #E8E5DD;
+	z-index: 1;
+	display: inline-block:
 }
 
-#nav {
-	margin-left: 60%;
+#header img {
+	width: 10%;
+	margin-top: -2%;
+	margin-right: 50%;
+	float: left;
 }
 
-#nav li{
+#header li{
 	display: inline;
-	padding-right: 10%;
+	padding-right: 5%;
 	font-size: 1.5em;
+	float: left;
 }
 
-#nav a {
+#header a {
 	text-decoration: none;
 	color: black;
 }
