--- a/Cleaning Project/css/style.css
+++ b/Cleaning Project/css/style.css
@@ -6,18 +6,26 @@ body {
 	font-family: myFirstfont;
 }
 
-#top {
+@font-face {
+	font-family: myFirstfont;
+	src: url("../fonts/PetitaLight.ttf");
+}
+
+
+/* Buttom that sends you to the top */
+
+.top {
+	width: 50px;
 	margin-left: 48%;
 	position: fixed;
-	width: 50px;
 	z-index: 1;
 	bottom: 0;
 }
-#top img{
+.top img{
 	width: 100%;
 }
 
-
+/* Accordion / the ones inside the home and buisness tags */
 
 button.accordion {
     background-color: #eee;
@@ -42,14 +50,8 @@ div .panel {
 }
 
 
+/* Top of the page */
 
-
-
-
-@font-face {
-	font-family: myFirstfont;
-	src: url("../fonts/PetitaLight.ttf");
-}
 
 #page1 {
 	width: 100%;
@@ -65,14 +67,14 @@ div .panel {
     background-size: cover;
 	position: relative;
 }
-#cover {
+.cover {
 	background-color: rgba(255,255,255, .4);
 	position: absolute;
 	width: 100%;
 	height: 600px;
 	top: 0;
 }
-#header {
+.header {
 	width: 100%;
 	height: 50px;
 	padding: 1% 0;
@@ -82,35 +84,35 @@ div .panel {
 	display: inline-block
 }
 
-#header img {
+.header img {
 	width: 10%;
 	margin-top: -2%;
 	margin-right: 50%;
 	float: left;
 }
 
-#header li{
+.header li{
 	display: inline;
 	padding-right: 5%;
 	font-size: 1.5em;
 	float: left;
 }
 
-#header a {
+.header a {
 	text-decoration: none;
 	color: black;
 }
 
-#homepage{
+.homepage{
 	text-align: center;
 	position: absolute;
 	top: 10%;
 }
-#homepage img {	
+.homepage img {	
 	width: 80%;
 }
 
-
+/* Why Icloud */
 
 #intro {
 	width: 100%;
@@ -126,9 +128,7 @@ div .panel {
 	margin-left: 2%;
 }
 
-
-
-
+/* The Home tab */
 
 #page2 {
 	width: 100%;
@@ -136,7 +136,11 @@ div .panel {
 	background-color: #E8E5DD;
 }
 
-#home-info {
+.home-info li {
+	list-style-type: none;
+}
+
+.home-info {
 	width: 30%;
 	margin-left: 3%;
 	float: left;
@@ -144,16 +148,12 @@ div .panel {
 	margin-top: 5%;
 }
 
-#home-info li {
-	list-style-type: none;
-}
-
-#home-img {
+.home-img {
 	width: 60%;
 	float: right;
 }
 
-#home-img img {
+.home-img img {
 	width: 90%;
 	margin: 2%;
 	padding: 1%;
@@ -161,12 +161,7 @@ div .panel {
 	height: 400px;
 }
 
-
-
-
-
-
-
+/* The Buisness tab */
 
 #page3 {
 	width: 100%;
@@ -174,12 +169,24 @@ div .panel {
 	background-color: #E8E5DD;
 }
 
-#buisness-img {
+.buisness-info {
+	width: 30%;
+	float: left;
+	padding: 0 1%;
+	margin-top: 4%;
+}
+
+.buisness-info li {
+	padding-bottom: 2%;
+	font-size: 1em;
+}
+
+.buisness-img {
 	width: 60%; 
 	float: left;
 }
 
-#buisness-img img {
+.buisness-img img {
 	width: 90%;
 	height: 400px;
 	margin: 2%;
@@ -187,17 +194,7 @@ div .panel {
 	border: 1px solid black;
 }
 
-#buisness-info {
-	width: 30%;
-	float: left;
-	padding: 0 1%;
-	margin-top: 4%;
-}
-
-#buisness-info li {
-	padding-bottom: 2%;
-	font-size: 1em;
-}
+/* The Tabs */
 
 .container {
 	width: 90%;
