--- a/Cleaning Project/css/style.css
+++ b/Cleaning Project/css/style.css
@@ -1,5 +1,7 @@
 body {
 	margin: 0;
+	background-color: #E8E5DD;
+	overflow:hidden;
 }
 
 * {
@@ -11,21 +13,7 @@ body {
 	src: url("../fonts/PetitaLight.ttf");
 }
 
-
-/* Buttom that sends you to the top */
-
-.top {
-	width: 50px;
-	margin-left: 48%;
-	position: fixed;
-	z-index: 1;
-	bottom: 0;
-}
-.top img{
-	width: 100%;
-}
-
-/* Accordion / the ones inside the home and buisness tags */
+/* Accordion / the ones inside the home and business tags */
 
 button.accordion {
     background-color: #eee;
@@ -48,6 +36,9 @@ div .panel {
     padding: 0 18px;
     display: none;
 }
+div .panel p{ 
+	margin:0;
+}
 
 
 /* Top of the page */
@@ -55,12 +46,12 @@ div .panel {
 
 #page1 {
 	width: 100%;
-	height: 600px;
+	height: 520px;
 	background-size: 100% 100%;
 }
 .parallax {
     background-image: url("../images/nyc.jpg");
-    height: 600px; 
+    height: 520px; 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -68,64 +59,20 @@ div .panel {
 	position: relative;
 }
 .cover {
-	background-color: rgba(255,255,255, .4);
+	background-color: rgba(255,255,255, .5);
 	position: absolute;
 	width: 100%;
-	height: 600px;
+	height: 520px;
 	top: 0;
-}
-.header {
-	width: 100%;
-	height: 50px;
-	padding: 1% 0;
-	position: fixed;
-	top: 0;
-	z-index: 1;
-	display: inline-block
-}
-
-.header img {
-	width: 10%;
-	margin-top: -2%;
-	margin-right: 50%;
-	float: left;
-}
-
-.header li{
-	display: inline;
-	padding-right: 5%;
-	font-size: 1.5em;
-	float: left;
-}
-
-.header a {
-	text-decoration: none;
-	color: black;
 }
 
 .homepage{
 	text-align: center;
 	position: absolute;
-	top: 10%;
+	top: 2%;
 }
 .homepage img {	
 	width: 80%;
-}
-
-/* Why Icloud */
-
-#intro {
-	width: 100%;
-	height: 350px;
-	text-align: center;
-	padding: 5% 0;
-	display: inline-block;
-	background-color: #E8E5DD;
-}
-.img {
-	width: 30%;
-	float: left;
-	margin-left: 2%;
 }
 
 /* The Home tab */
@@ -160,8 +107,17 @@ div .panel {
 	border: 1px solid grey;
 	height: 400px;
 }
+#page2 .back {
+	position: fixed;
+	margin-top: 1%;
+	margin-left: 4%;
+}
+#page2 .back img{
+	width: 50px;
+}
 
-/* The Buisness tab */
+
+/* The Business tab */
 
 #page3 {
 	width: 100%;
@@ -169,49 +125,107 @@ div .panel {
 	background-color: #E8E5DD;
 }
 
-.buisness-info {
+.business-info {
 	width: 30%;
 	float: left;
 	padding: 0 1%;
 	margin-top: 4%;
 }
 
-.buisness-info li {
+.business-info li {
 	padding-bottom: 2%;
 	font-size: 1em;
 }
 
-.buisness-img {
+.business-img {
 	width: 60%; 
 	float: left;
 }
 
-.buisness-img img {
+.business-img img {
 	width: 90%;
 	height: 400px;
 	margin: 2%;
 	padding: 1%;
 	border: 1px solid black;
 }
+#page3 .back {
+	position: fixed;
+	margin-top: 1%;
+	margin-left: 86%;
+}
+#page3 .back img{
+	width: 50px;
+}
+
+
+#page4 {
+	width: 100%;
+	display: inline-block;
+	background-color: #E8E5DD;
+}
+#information {
+	text-align: center;
+}
+#information form {
+	border: 1px black solid;
+	border-radius: 10px;
+	width: 26%;
+	padding: 1%;
+	float: left;
+	margin-left: 15%;
+}
+#information input{ 
+	width: 60%;
+	border: 1px soild black;
+	margin: 15px 0;
+    padding: 3%;
+	box-sizing: border-box;
+	font-size: 14px;
+	color: black;
+}
+#information select{
+	width: 30%;
+}
+input:focus{
+	outline: 0;
+}
+#information button {
+  text-transform: uppercase;
+  outline: 0;
+  width: 60%;
+  border: 1px solid black;
+  padding: 15px;
+  cursor: pointer;
+  font-size: 14px;
+  margin: 4% 0;
+  background-color: #E8E5DD;
+}
+
 
 /* The Tabs */
 
 .container {
-	width: 90%;
-	height: 80%;
-	padding: 0 5%;
+	width: 100%;
+	height: 500px;
 	background-color: #E8E5DD;
+	padding: 2% 1% 1% 0;
+	position:absolute;
+	top:0;
 }
 #nav button{
 	width: 30%;
 	display: inline;
 	padding: 0 5%;
-	font-size: 3em;
+	font-size: 2em;
 	border: 1px solid black;
 	background: none;
 }
 #nav button:focus {outline:0;}
-
+button:hover {
+	background: rgba(0,0,0,0);
+	box-shadow: inset 0 0 0 3px black;
+}
 #nav {
 	text-align: center;
 	padding: 2%;
